sakura-argo/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflow

spec:
  routes:
    - kind: Rule
      match: Host(`workflow.s-cd.trap.jp`)
      middlewares:
        - name: auth-trap-jp-hard
          namespace: auth
      services:
        - kind: Service
          namespace: argo
          name: argo-argo-workflows-server
          port: 2746
          scheme: http
          strategy: RoundRobin
          weight: 1
